fix overlapping

--- a/src/components/ShowCat/ShowCat.module.css
+++ b/src/components/ShowCat/ShowCat.module.css
@@ -1,6 +1,6 @@
 
 .card-item {
-  height: 20rem;
+  height: 18rem;
   border-radius: 30px;
   overflow: hidden;
   box-shadow: 5px 5px 30px rgb(0 0 0 / 17%);
